@@ -8,13 +8,17 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.vdoloka.dto.CategoryDTO;
 import org.vdoloka.dto.OrderDto;
 import org.vdoloka.dto.OrderInfoDto;
-import org.vdoloka.service.impl.OrdersServiceImpl;
+import org.vdoloka.entity.Category;
+import org.vdoloka.model.SortDirection;
+import org.vdoloka.service.impl.OrdersService;
 
 import java.util.Arrays;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -24,7 +28,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 class OrdersControllerTest {
 
     @Mock
-    private OrdersServiceImpl ordersService;
+    private OrdersService ordersService;
 
     @InjectMocks
     private OrdersController ordersController;
@@ -32,24 +36,26 @@ class OrdersControllerTest {
     private MockMvc mockMvc;
 
     @Test
-    void ShouldReturnOrdersWhenGetOrders() throws Exception {
-        List<OrderInfoDto> orderInfoDtos = Arrays.asList(OrderInfoDto.builder().build(), OrderInfoDto.builder().build());
-        when(ordersService.getOrders(1, 10)).thenReturn(orderInfoDtos);
+    void ShouldGetOrders() throws Exception {
+        List<OrderInfoDto> orderInfoDto = List.of(OrderInfoDto.builder().id(1).hubId(1).resourceId(1).quantity(1).build(),
+                OrderInfoDto.builder().id(1).hubId(1).resourceId(1).quantity(1).build());
 
-        mockMvc = MockMvcBuilders.standaloneSetup(ordersController).build();
-        mockMvc.perform(get("/orders/")
-                        .param("page", "1")
-                        .param("itemPerPage", "10"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(content().json("[{},{}]"));
+        when(ordersService.getOrders(anyInt(), anyInt(), anyString(), any(SortDirection.class))).thenReturn(orderInfoDto);
+
+        List<OrderInfoDto> result = ordersController.getOrders(1, 10, "id", SortDirection.DESC);
+
+        assertThat(result)
+                .isNotNull()
+                .hasSize(orderInfoDto.size())
+                .extracting(OrderInfoDto::getHubId)
+                .containsExactly(orderInfoDto.get(0).getHubId(), orderInfoDto.get(1).getHubId());
     }
 
     @Test
     void shouldCallOrdersServiceWhenPostOrder() {
         OrderDto orderDto = OrderDto.builder().build();
 
-        ordersController.addOrder(orderDto);
+        ordersService.addOrder(orderDto);
 
         verify(ordersService, times(1)).addOrder(orderDto);
     }
